--- a/controlserver/docker-compose.yml
+++ b/controlserver/docker-compose.yml
@@ -3,26 +3,40 @@ version: '3'
 services:
   sensor_temp:
     build: ./sensor_temp
+    volumes:
+      - ./sensor_temp:/app
     ports:
       - "5001:5001"
+    working_dir: /app
 
   sensor_pressure:
     build: ./sensor_pressure
+    volumes:
+      - ./sensor_pressure:/app
     ports:
       - "5002:5002"
+    working_dir: /app
 
   sensor_voltage:
     build: ./sensor_voltage
+    volumes:
+      - ./sensor_voltage:/app
     ports:
       - "5003:5003"
+    working_dir: /app
 
   actuator:
     build: ./actuator
+    volumes:
+      - ./actuator:/app
     ports:
       - "5004:5004"
+    working_dir: /app
 
   ui:
     build: ./ui
+    volumes:
+      - ./ui:/app
     ports:
       - "5000:5000"
     depends_on:
@@ -30,3 +44,4 @@ services:
       - sensor_pressure
       - sensor_voltage
       - actuator
+    working_dir: /app
