--- a/controlserver/actuator/Dockerfile
+++ b/controlserver/actuator/Dockerfile
@@ -5,6 +5,6 @@ WORKDIR /app
 
 COPY . .
 
-RUN pip install flask requests flask-cors
+RUN pip install flask requests flask-cors pyjwt
 
 CMD ["python", "app.py"]
